# gti_router1

./: .gitignore  .pytest_reg.txt  CHANGELOG.md  README.md  pyproject.toml
config/: router.dev.yaml  router.yaml.example
docs/: 1-1-scaffold-del-proyecto-logging-y-retry.md  1-2-sistema-de-configuracion-yaml-validada.md  1-3-cliente-fuente-rtsp-con-probe.md  1-4-pipeline-ffmpeg-para-segmentacion-hls.md  11-1-mini-api-http-local-fastapi.md  11-10-export-estatico-servido-por-fastapi.md  11-11-modo-kiosko-chromium.md  11-12-endurecimiento-loopback-sin-red.md  11-2-retener-last-frame-local-endpoint.md  11-3-servir-hls-local-preview.md  11-4-endpoint-payload-qr-de-alta.md  11-5-adaptar-capa-de-datos-ui-a-api-local.md  11-6-limpiar-ui-quitar-flota-nube-login-scan.md  11-7-pantalla-estado-del-equipo.md  11-8-pantalla-camaras-en-vivo.md  11-9-pantalla-alta-qr-generar-mostrar.md  2-1-cliente-s3-con-aioboto3.md  2-2-cola-de-upload-con-indice-en-sqlite.md  2-3-retry-de-upload-con-backoff.md  2-4-buffer-local-y-gestion-de-espacio.md  2-5-priorizacion-de-backlog-ratio-3-1.md  2-6-integracion-pipeline-upload-e2e.md  3-1-registro-de-dispositivo-en-supabase.md  3-2-health-reporter-hacia-router-health.md  3-3-monitor-de-sistema.md  3-4-auto-recuperacion-rtsp.md  3-5-watchdog-systemd.md  3-6-modo-degradado-sin-supabase.md  3-7-orquestacion-final-y-ciclo-de-vida.md  4-1-cliente-onvif-para-ptz.md  4-2-recepcion-de-comandos-desde-ptz-commands.md  4-3-ejecucion-y-feedback-de-comandos.md  4-4-validacion-de-permisos-y-seguridad.md  4-5-integracion-de-ptz-con-el-ciclo-de-vida.md  (+14 more)
src/: main.py  (+2 more)
(+104 files in other folders)
