[project]
name = "gti-router"
version = "0.1.0"
description = "GTI Router — edge node for continuous video capture, HLS segmentation and S3 upload"
requires-python = ">=3.11"
dependencies = [
    "aioboto3~=15.0",
    "onvif-zeep",
    "pydantic-settings~=2.14",
    "PyYAML",
    "psutil",
    "pynmea2",
    "systemd-python",
]

[project.scripts]
gti-router = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "moto[s3]>=5.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
